--- a/style.css
+++ b/style.css
@@ -64,7 +64,20 @@ nav ul {
   display: flex;
   gap: 25px;
 }
-@media (max-width: 768px) {
+@media (max-width: 768px)
+{
+ .hero h2 {
+    font-size: 2.2rem;
+  }
+
+  .hero p {
+    font-size: 1rem;
+  }
+
+  .hero-buttons {
+    flex-direction: column;
+    gap: 15px;
+  }
   nav ul {
     display: none;
     flex-direction: column;
