--- a/style.css
+++ b/style.css
@@ -524,6 +524,11 @@ footer
   margin-top: 50px;
   border-top: 1px solid #E5E7EB;
 }
+@media (max-width: 768px) {
+  #contact form {
+    width: 90%;
+  }
+}
 
 footer p
 {
