--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ footer .footer-container {
 footer .footer-left h4 {
   font-size: 1.8rem;
   font-weight: 700;
-  color: var(--color-white);
+  color: var(--color-black);
 }
 
 footer .footer-left h4 span {
