--- a/style.css
+++ b/style.css
@@ -962,4 +962,15 @@ nav ul li a.active {
     text-align: center;
   }
 }
+.founder-social {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.founder-social i {
+  color: #E1306C;
+  font-size: 18px;
+  cursor: pointer;
+}
 
