--- a/style.css
+++ b/style.css
@@ -30,12 +30,12 @@ body {
 }
 header
 {
-  background-color: var(--color-blue);
+  background-color: var(--color-white);
   padding: 10px 0;
   box-shadow: 0 2px 4px rgba(0,0,0,0.05);
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 1000;
 }
 header .logo h1 span
 {
